--- a/mystyle.css
+++ b/mystyle.css
@@ -202,9 +202,9 @@ justify-content: right;
 	margin-left: 10px;
 	margin-top: 20px;
 	margin-bottom: -10px;
-	font-size: 17px;
+	font-size: 22px;
 }
-.topnav {
+.nav {
 	width: 100%;
 	padding: 5px 5px 5px 5px;
 	background-color:#81C8F8;
@@ -212,8 +212,9 @@ justify-content: right;
 	margin-left: 2px;
 	border-radius: 3px 3px 3px 3px;
 	float: Center;
+	font-size: 25px;
 }
-.topnav a {
+.nav a {
 	display:block;
   width: 100%;
 	font-family: Arial;
@@ -224,57 +225,7 @@ justify-content: right;
 	font-size: 25px;
 	background-color: #81C8F8;
 }
-.topnav ul {
-	float: center;
-	width: 100%;
-	padding-inline-start: 0px;
-	margin-block-start: 0px;
-	margin-block-end: 0px;
-}
-.topnav ul li {
-	float: left;
-	width: 110px;
-	list-style: none;
-	position: relative;
-	display: block;
-	margin-right: 100px;
-	margin-left: 3px;
-	
-}
-.topnav ul li ul {
-	display: none;
-	position: absolute;
-	background-color: #81C8F8;
-	padding: 10px 0px 5px 10px;
-	border-radius: 10px 10px 10px 10px;	
-	z-index: 1000;
-}
-.topnav ul li:hover ul {
-	display: block;
-	position: absolute;
-	background-color: #81C8F8;
-	padding-right: 5px;
-	padding: 2px;
-	padding-top: 0px;
-	border-radius: 3px 2px 2px 5px;
-}
-.topnav ul li ul li {
-	padding: 3px;
-	margin: 3px;
 
-}
-.topnav ul li ul li a {
-	text-align: center;
-	font-size: 20px;
-	border-radius: 3px;
-  width: 100px;
-  line-height: 20px;
-}
-.topnav ul li ul li a:hover {
-	background-color:#8FE9FF;
-  width: 100px;
-  line-height: 20px;
-}
 .clearfix::after,
 .calendar ol::after {
 	content: ".";
