--- a/mystyle.css
+++ b/mystyle.css
@@ -338,7 +338,8 @@ justify-content: right;
 }
 .calendar {
 	border-radius: 40px;
-	height: 100%;
+	height: auto;
+	width: 100%;
 }
 
 @media (min-width: 992px) {
